[package]
name = "karasync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
logger = {path = "../logger"}
remotehub = {path = "../remotehub"}
project_unify = {path = "../project_unify"}
